tabbing inputs of type number require 2 tab presses with certain input heights/max-height
Categories
(Core :: Layout: Form Controls, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | + | verified |
| firefox75 | --- | verified |
People
(Reporter: Ryan.Flaherty, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
515 bytes,
text/html
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0
Steps to reproduce:
On Firefox nightly for windows 75.0a1 (2020-02-21) (64-bit)
Viewing the attached html file:
Enter a number into ok 1 and press tab
enter a number into ok 2 and press tab
enter a number into sticky 1 and press tab. press tab again
enter a number into ok 3 and press tab
enter a number into sticky 2 and press tab. press tab again
Actual results:
On "sticky 1" and "sticky 2" the input is highlighted while tabbing through
Expected results:
tabbing behaviour should have been consistent with other number inputs. I expected to move onto the next tab.
This behaviour is not present on Firefox for windows 73.0.1 (64-bit)
Comment 1•5 years ago
|
||
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:73.0) Gecko/20100101 Firefox/73.0
Hi,
I have managed to reproduce this issue in Beta version 74.0b7 and latest Nightly build 75.0a1 (2020-02-25). The issue not reproducible on release version 73.0.1 or Chrome.
Further, I will move this over to a component so developers can take a look over it. If this is not the correct component please feel free to change it to an appropriate one.
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4fddecc4bdb81585491253a6f3ae4d706947ff0f&tochange=bebd7befedef0a06afa1925279f44b815d450f5b
Thanks for the report.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
[Tracking Requested - why for this release]: form control regression
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
I cannot reproduce on Linux with a clean profile, for some reason, but I can repro in my main profile... Looking into it.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
This works for non-number input elements because of the
IsRootOfNativeAnonymousSubtree check above, but doesn't work for
<input type=number>.
It used to work (kinda) before bug 981248 because of the weird focus-manager
redirection code to the inner <input> that was causing problems and which that
bug removed.
Make the check a bit more explicit, and add a test.
| Assignee | ||
Comment 5•5 years ago
|
||
Comment on attachment 9129244 [details]
Bug 1617342 - Don't treat scrollable boxes inside input elements as focusable. r=bzbarsky
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0 (on windows)
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple check to restore semantics. Intentionally minimal, upliftable patch.
- String changes made/needed: none
| Assignee | ||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Comment on attachment 9129244 [details]
Bug 1617342 - Don't treat scrollable boxes inside input elements as focusable. r=bzbarsky
P2, fixes a 74 regression, uplift approved for 74 beta 9, thanks.
Comment 7•5 years ago
|
||
| bugherder uplift | ||
Comment 8•5 years ago
|
||
Backed out because it still needs review: https://hg.mozilla.org/releases/mozilla-beta/rev/d751815df3af
Updated•5 years ago
|
Comment 10•5 years ago
|
||
| bugherder uplift | ||
Comment 11•5 years ago
|
||
Verified - Fixed in latest Beta build 74.0b9 (Build id: 20200227210932) using Windows 10.
Updated•5 years ago
|
Comment 12•5 years ago
|
||
| bugherder | ||
Comment 13•5 years ago
|
||
Verified - Fixed in latest Nightly build 75.0a1 (Build id: 20200228092428) using Windows 10, Mac OS 10.15 and Ubuntu 18.04
Updated•5 years ago
|
Description
•