Bug 1617342 - Don't treat scrollable boxes inside input elements as focusable. r=bzbarsky

The code in nsIFrame::IsFocusable works for non-number input elements, because
of the `IsRootOfNativeAnonymousSubtree` check, but doesn't work for
`<input type=number>`, as the scrollable area is wrapped in a flex container
(see nsNumberControlFrame::CreateAnonymousContent).

It used to work (kinda) before bug 981248 because of the weird focus-manager
redirection code to the inner <input> that was causing problems and which that
bug removed.

Make the check a bit more explicit, and add a test.

Differential Revision: https://phabricator.services.mozilla.com/D64432

--HG--
extra : moz-landing-system : lando